crates/sdk-tests/tests/template/declaring_static_not_allowed.stderr
error: declaring new `static` items inside `#[template]` is not supported.
 --> $DIR/declaring_static_not_allowed.rs:3:1
  |
3 | #[template]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `template` (in Nightly builds, run with -Z macro-backtrace for more info)
