crates/sdk-tests/tests/template/declaring_static_not_allowed.rs
use svm_sdk::template;

#[template]
mod Template {
    static N: u32 = 10;
}

fn main() {}
